# ProtoVault

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/desktop/: electron.vite.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/desktop/resources/clang-compat/: cstdbool  cstddef  cstdint
apps/desktop/src/main/: assistant.ts  header-generator.test.ts  header-generator.ts  index.ts  workspace-index.ts  workspace.file-scenarios.test.ts  workspace.parser-matrix.test.ts  workspace.test.ts  workspace.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/shared/: assistant.test.ts  assistant.ts  service.test.ts  service.ts  workspace.ts
apps/desktop/tests/e2e/: app-process.spec.ts  packaged.spec.ts  workspace.spec.ts
doc/: Agent开发计划.md  Agent循环运行记录.md  Agent循环迭代方法.md  ProtoVaultAI功能知识库.md  ProtoVault使用手册.md  ProtoVault全功能心智模型_v2026-07-05.md  产品审核与架构升级建议_2026-07-10.md  关系图谱最终设计.md  初版设计思路.md  发布检查清单.md  开发更新日志.md  版本资产与多工作区合并设计.md
examples/.protocol/network/: network.json
examples/radar-workspace/headers/common/: geometry.hpp  time.hpp
examples/radar-workspace/headers/diagnostics/: faults.hpp
examples/radar-workspace/headers/radar/: detection.hpp  track.hpp
fixtures/: .gitignore
fixtures/radar-workspace/headers/control/: commands.hpp
scripts/: agent-loop.ps1  core.ps1  p14-git-loop.ps1  prepare-bundled-tools.ps1
services/protocol-core/: CMakeLists.txt
services/protocol-core/src/: main.cpp
(+10 files in other folders)
